Refactor: Modernize Stream API usage and fix Kinesis version resolution
- Refactored AWS2 deployment processors to use modern Stream.toList()
- Fixed missing amazon-kinesis-client version in camel-quarkus-bom
- Polished OpensearchResource integration test code for better readability
- Documented systemic JVM integration test CDI issues for future investigation