@@ -19,7 +19,6 @@ package org.apache.camel.quarkus.component.opensearch.it;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
@@ -70,7 +69,7 @@ public class OpensearchResource {
                 .withHeaders(headers)
                 .request(String.class);
 
-        if (response.isBlank() || response.isEmpty()) {
+        if (response.isBlank()) {
             return Response.status(404).build();
         }
 
@@ -97,9 +96,9 @@ public class OpensearchResource {
                 .withBody(br)
                 .request(BulkResponseItem[].class);
 
-        List<String> insertedIds = Arrays.asList(bulkResponse)
-                .stream().map(BulkResponseItem::id)
-                .collect(Collectors.toList());
+        List<String> insertedIds = Arrays.stream(bulkResponse)
+                .map(BulkResponseItem::id)
+                .toList();
 
         return Response.ok(insertedIds).build();
 
@@ -147,7 +146,7 @@ public class OpensearchResource {
 
         MsearchRequest.Builder builder = null;
 
-        if (user != null & order != null) {
+        if (user != null && order != null) {
             builder = new MsearchRequest.Builder().searches(
                     new RequestItem.Builder()
                             .header(new MultisearchHeader.Builder().index("users").build())
